Changed font sizes + headers

--- a/PortfolioFinal/index.html
+++ b/PortfolioFinal/index.html
@@ -51,14 +51,16 @@
     <header class="header_top">
       <div class="container text-left">
         <h1>Marie Trull</h1>
-        <p class="lead">Full Stack Web Developer</p>
+        <h2 class="lead">Full Stack Web Developer</h2>
       </div>
+      <div class="container text-right">
+
     </header>
 
     <section id="about">
       <div class="container">
 
-            <h2>About</h2>
+            <h3>About</h3>
             <div id="aboutContainer">
 
               <div class="about"> 
@@ -92,7 +94,7 @@
 
         <div class="skills">
 
-            <h2>Skills</h2>
+            <h3>Skills</h3>
 
             <div id="skillsContainer">
                   <ul class="skillsColumn">
@@ -124,7 +126,7 @@
     <section id="webDev">
       <div class="container">
 
-            <h2>Projects</h2>
+            <h3>Projects</h3>
 
                 <div id='projectContainer'>
 
@@ -185,7 +187,7 @@
 
     <section id="contact">
       <div class="container">
-            <h2>Contact</h2>
+            <h3>Contact</h3>
             <div id='contactContainer'>
               <a href='https://www.linkedin.com/in/marie-trull'>
                 <img src='https://i.imgur.com/8ElXPXQ.png'>
