--- a/PortfolioFinal/index.html
+++ b/PortfolioFinal/index.html
@@ -136,13 +136,26 @@
                         <div class='project'>
                           <div class='projectDescription'>
                             <h4> General Assembly Task Manager </h4>
-                            <p> A fullstack task management app, created as a collaboration, where General Assembly students can organize and manage their assignments by type. Built with React, Sinatra, and Postgresql.</p>
+                            <p> A fullstack task management app where General Assembly students can organize and manage their assignments by type. Built with React, Sinatra, and PostgreSQL.</p>
                           <div>
                               <a class='projectButton' href='https://polar-anchorage-35314.herokuapp.com/'>Web </a>
                               <a class='projectButton' href='https://github.com/marietrull/Task_Manager_Project_3'>GitHub </a>
                            </div>
                           </div>
                           <img class='projectImage' src='https://i.imgur.com/rI2Ug6y.png'>
+                        </div>
+                      </div>
+                      <div class="carousel-item">
+                        <div class='project'>
+                          <div class='projectDescription'>
+                          <h4> Wreck Chicago </h4>
+                          <p> In Development - users will be able to explore scuba diving sites in Lake Michigan (specifically shipwrecks). Built with React, Sinatra, and PostgreSQL. </p>
+
+                          <div>
+                              <a class='projectButton' href='https://github.com/marietrull/wreck_chicago'>GitHub </a>
+                           </div>
+                        </div>
+                          <img class='projectImage' src='https://i.imgur.com/hfpDwIf.png'>
                         </div>
                       </div>
                       <div class="carousel-item">
