--- a/PortfolioFinal/index.html
+++ b/PortfolioFinal/index.html
@@ -80,7 +80,7 @@
               <div class="about"> 
                 <h5> Creativity </h5>
                 <br/>
-                <p> In my spare time, I make a concious effort to always be working on some sort of artistic project. It is not uncommon to find me hanging out with my iPad and Apple Pencil.</p>
+                <p> In my spare time, I make a conscious effort to always be working on some sort of artistic project. It is not uncommon to find me hanging out with my iPad and Apple Pencil.</p>
               </div>
             </div>
           </div>
