--- a/PortfolioFinal/index.html
+++ b/PortfolioFinal/index.html
@@ -152,6 +152,7 @@
                           <p> In Development - users will be able to explore scuba diving sites in Lake Michigan (specifically shipwrecks). Built with React, Sinatra, and PostgreSQL. </p>
 
                           <div>
+                              <a class='projectButton' href='https://wreckchicago.herokuapp.com/'>Web </a>
                               <a class='projectButton' href='https://github.com/marietrull/wreck_chicago'>GitHub </a>
                            </div>
                         </div>
